2000-08-15 14:40 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   * doc/en/cmdline.txt
     * Formated text added by Victor

   *utils/hbdoc/hbdoc.prg
    utils/hbdoc/genchm.prg
     * Generated Content file for Windows .CHM help now match Windows .HLP help

2000-08-15 22:00 UTC+0700 Andi Jahja <andij@aonlippo.co.id>

   * source/lang/msgid.c
   * source/lang/Makefile
   * makefile.bc
   * makefile.vc
     + Indonesian language module updated.

2000-08-14 18:45 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * doc/whatsnew.txt
     + Added simplex.

2000-08-15 02:48 UTC+0100 Victor Szakats <info@szelvesz.hu>

   ; Waiting for some minor patches before the new release.

   * source/common/hbver.c
     + QUESTION: added about bit depth detection.

   * doc/whatsnew.txt
     + Few new items added.

   * doc/en/cmdline.txt
     + Missing part added.

   * source/lang/msgko.c
   * tests/keywords.prg
   * samples/pe/editorhi.prg
     ! Tabs removed.

   * source/vm/mainwin.c
     * Some formatting.
     * Fixed form MSVC

   * contrib/rdd_ads/ads1.c
   * contrib/rdd_ads/adsfunc.c
     ! Fixed for MSVC

2000-08-14 14:45 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * contrib/rdd_ads/ace.h
     + Added separate test for RSXNT for definition of ENTRYPOINT.
   * contrib/rdd_ads/ads1.c
     + Added #include <ctype.h> to eliminate implicit declaration of
       function 'tolower' warning in function `strcmpNoCase'
   * contrib/rdd_ads/adsfunc.c
     - Eliminated unused variable 'ulRetVal' in functions
       HB_FUN_ADSISENCRYPTIONENABLED, HB_FUN_ADSISRECORDENCRYPTED,
       and HB_FUN_ADSISTABLEENCRYPTED.

2000-08-14 11:00 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rtl/gtwin/gtwin.c
     * fixed handling of arrow keys for international keyboards
     * this need to be checked for different keyboards ( now it works
     * for my :) )

Changelog: 2000-08-13 15:20 UTC+0500 April White <awhite@user.rose.com>
   * doc/en/