@@ -5,6 +5,6 @@
 /* hbexprc.c is also included from ../macro/macro.c
  * However it produces a slighty different code if used in 
  * macro compiler (there is an additional parameter passed to some functions)
- * 0 - ignore this magic number - this is used to force compilation
+ * 1 - ignore this magic number - this is used to force compilation
 */
 #include "hbexprc.c"
